tests/pre_push/snapshots/pre_push__publication__version_increment_v1.snap
---
source: tests/pre_push/publication.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] Branch feat-versioning is MANAGED. Syncing stack...
[gherrit] [WARN] Using custom GitHub API URL: [MOCK_SERVER_URL]
[gherrit] Pushing chunk to remote...
[gherrit] Creating 1 PR...
[gherrit] Created 1 PR.
[gherrit] Created PR #1: https://github.com/owner/repo/pull/1
[gherrit] Pushing chunk to remote...
[gherrit] Queued update for PR #1: https://github.com/owner/repo/pull/1
[gherrit] Updating 1 PR...
[gherrit] Updated 1 PR.
[gherrit] Successfully synced 1 commits.
